@@ -112,7 +112,7 @@ if [ -x /sbin/ldconfig ]; then /sbin/ldconfig %{_libdir}; fi
 %{_sbindir}/plmpower
 %dir %config %{_sysconfdir}/powerman
 %{_sysconfdir}/powerman/*.dev
-%config(noreplace) %{_sysconfdir}/powerman/powerman.conf
+%{_sysconfdir}/powerman/powerman.conf.example
 %{_mandir}/*1/*
 %{_mandir}/*5/*
 %{_mandir}/*7/*
