@@ -33,7 +33,7 @@ localstatedir="@localstatedir@"
 DESC="PowerMan"
 DAEMON="$sbindir/powermand"
 #DAEMON_ARGS=
-#CONFIG=
+CONFIG=$sysconfdir/powerman/powerman.conf
 PIDFILE="$localstatedir/run/powerman/powermand.pid"
 #NICE=
 USER=@RUN_AS_USER@
